// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`regular condition negation compiles (a, b) => ({color: {'@supports (display: grid)': a, '@supports (display: flex)': b}}) 1`] = `
{
  "code": "import * as stylex from '@stylexjs/stylex';
export const styles = {
  root: (a, b) => [{
    kMwMTN: (a != null ? "x14v20to " : a) + (b != null ? "x1lcug7j" : b),
    $$css: true
  }, {
    "--x-1yjswgp": a != null ? a : undefined,
    "--x-42hr97": b != null ? b : undefined
  }]
};",
  "css": "@property --x-1yjswgp { syntax: "*"; inherits: false;}
@property --x-42hr97 { syntax: "*"; inherits: false;}
@supports (display: grid) and (not (display: flex)){.x14v20to.x14v20to:not(#\\#){color:var(--x-1yjswgp)}}
@supports (display: flex){.x1lcug7j.x1lcug7j:not(#\\#){color:var(--x-42hr97)}}",
}
`;

exports[`regular condition negation compiles {color: {'@media (min-width: 400px)': 'red', '@media (min-width: 600px)': {'@media (min-height: 500px)': 'blue'}}} 1`] = `
{
  "code": "import * as stylex from '@stylexjs/stylex';
export const styles = {
  root: {
    kMwMTN: "x1neppwc x1wf3puc",
    $$css: true
  }
};",
  "css": "@media (min-width: 400px) and (max-width: 599.99px), (min-width: 400px) and (max-height: 499.99px){.x1neppwc.x1neppwc{color:red}}
@media (min-width: 600px){@media (min-height: 500px){.x1wf3puc.x1wf3puc.x1wf3puc{color:blue}}}",
}
`;

exports[`regular condition negation compiles {color: {'@media (min-width: 400px)': 'red', '@media screen, (max-width: 300px)': 'blue'}} 1`] = `
{
  "code": "import * as stylex from '@stylexjs/stylex';
export const styles = {
  root: {
    kMwMTN: "x13jh3vm xs03wd3",
    $$css: true
  }
};",
  "css": "@media screen, (max-width: 300px){.xs03wd3.xs03wd3{color:blue}}
@media not screen{@media (min-width: 400px){.x13jh3vm.x13jh3vm.x13jh3vm{color:red}}}",
}
`;

exports[`regular condition negation compiles {color: {'@supports (display: grid)': 'red', '@supports (display: flex)': 'blue'}} 1`] = `
{
  "code": "import * as stylex from '@stylexjs/stylex';
export const styles = {
  root: {
    kMwMTN: "x18ty137 x6o6ul9",
    $$css: true
  }
};",
  "css": "@supports (display: flex){.x6o6ul9.x6o6ul9{color:blue}}
@supports (display: grid) and (not (display: flex)){.x18ty137.x18ty137{color:red}}",
}
`;

exports[`regular condition negation compiles {color: {default: 'black', ':hover': 'red', ':active': 'blue'}} 1`] = `
{
  "code": "import * as stylex from '@stylexjs/stylex';
export const styles = {
  root: {
    kMwMTN: "x1mqxbix x1dgwipm x4oye9d",
    $$css: true
  }
};",
  "css": ".x1mqxbix{color:black}
.x1dgwipm:hover{color:red}
.x4oye9d:active{color:blue}",
}
`;

exports[`regular condition negation compiles {color: {default: 'black', '@media screen and (min-width: 400px)': 'red', '@media print': 'blue'}} 1`] = `
{
  "code": "import * as stylex from '@stylexjs/stylex';
export const styles = {
  root: {
    kMwMTN: "x1mqxbix xaxw0yw xux6igo",
    $$css: true
  }
};",
  "css": ".x1mqxbix{color:black}
@media screen and (min-width: 400px){.xaxw0yw.xaxw0yw{color:red}}
@media print{.xux6igo.xux6igo{color:blue}}",
}
`;

exports[`regular condition negation the existing option still disables normal exclusions 1`] = `
{
  "code": "import * as stylex from '@stylexjs/stylex';
export const styles = {
  root: {
    kMwMTN: "x4n3lfc x1cmrb8e",
    $$css: true
  }
};",
  "css": "@media (min-width: 400px){.x4n3lfc.x4n3lfc{color:red}}
@media (min-width: 600px){.x1cmrb8e.x1cmrb8e{color:blue}}",
}
`;
